// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzplWN jxRzUr absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxiKw kkGeDK w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Verify Message
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            To make sure that you are the owner of this wallet, you can pass the check. and this more text.
          </div>
          <div
            class="mt-8"
          >
            <div
              class="flex flex-col pb-6 border-b border-dashed border-theme-neutral-light"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex justify-between items-center"
                >
                  <div
                    class="text-lg font-semibold"
                  >
                    Verify JSON
                  </div>
                  <label
                    class="flex"
                  >
                    <input
                      checked=""
                      class="Toggle__Input-qyyifx-0 bXkHfF"
                      data-testid="verify-address__toggle"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-qyyifx-1 juvWiy"
                    >
                      <span
                        class="Toggle__HandleInner-qyyifx-2 ggonKR"
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="pr-12 mt-1 text-sm text-theme-neutral"
                >
                  You can verify only text using a JSON public key
                </div>
              </div>
            </div>
            <form
              class="space-y-8"
              data-testid="Form"
              id="VerifyMessage__form"
            >
              <div
                class="mt-8"
              >
                <div
                  class="sc-AxirZ laMNgs flex overflow-hidden flex-col space-y-5 rounded-lg border bg-theme-neutral-100 dark:bg-theme-neutral-800 border-theme-neutral-300 dark:border-theme-neutral-800 sm:space-y-0 sm:space-x-5 sm:flex-row"
                >
                  <div
                    class="flex items-center justify-center text-theme-warning-600"
                  >
                    <div
                      class="sc-AxjAm fYfzg"
                      height="1.75em"
                      width="1.75em"
                    >
                      <svg>
                        alert-warning.svg
                      </svg>
                    </div>
                  </div>
                  <span
                    class="pointer-events-none border rounded-md border-theme-warning-600"
                  />
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <p
                      class="leading-relaxed break-words"
                    >
                      <span>
                        Format(JSON): { "signatory": "...", "signature": "...", "message": "..."}
                      </span>
                    </p>
                  </div>
                </div>
                <div
                  class="mt-8"
                >
                  <fieldset
                    class="sc-AxhCb ckQmOL flex flex-col space-y-2"
                  >
                    <label
                      class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                      data-testid="FormLabel"
                      for="signed-message-content"
                    >
                      Signed message content
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <input
                      class="sc-AxhUy bmthJt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
                      data-testid="VerifyMessage_message-content"
                      name="signed-message-content"
                      type="text"
                      value=""
                    />
                  </fieldset>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="sc-AxiKw krTnPh"
                  data-testid="VerifyMessage__cancel"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="sc-AxiKw fJelQD"
                  data-testid="VerifyMessage__submit"
                  type="submit"
                >
                  Verify
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should render the non verify address content 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzplWN jxRzUr absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxiKw kkGeDK w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Verify Message
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            To make sure that you are the owner of this wallet, you can pass the check. and this more text.
          </div>
          <div
            class="mt-8"
          >
            <div
              class="flex flex-col pb-6 border-b border-dashed border-theme-neutral-light"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="flex justify-between items-center"
                >
                  <div
                    class="text-lg font-semibold"
                  >
                    Verify JSON
                  </div>
                  <label
                    class="flex"
                  >
                    <input
                      checked=""
                      class="Toggle__Input-qyyifx-0 bXkHfF"
                      data-testid="verify-address__toggle"
                      type="checkbox"
                    />
                    <div
                      class="Toggle__Handle-qyyifx-1 juvWiy"
                    >
                      <span
                        class="Toggle__HandleInner-qyyifx-2 ggonKR"
                      />
                    </div>
                  </label>
                </div>
                <div
                  class="pr-12 mt-1 text-sm text-theme-neutral"
                >
                  You can verify only text using a JSON public key
                </div>
              </div>
            </div>
            <form
              class="space-y-8"
              data-testid="Form"
              id="VerifyMessage__form"
            >
              <div
                data-testid="noverify-address__content"
              >
                <fieldset
                  class="sc-AxhCb ckQmOL mt-8"
                >
                  <label
                    class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                    data-testid="FormLabel"
                    for="message"
                  >
                    Message
                    <div
                      class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxhUy bmthJt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__message-input"
                    name="message"
                    type="text"
                  />
                </fieldset>
                <fieldset
                  class="sc-AxhCb ckQmOL mt-8"
                >
                  <label
                    class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                    data-testid="FormLabel"
                    for="signatory"
                  >
                    Public Key
                    <div
                      class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxhUy bmthJt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__signatory-input"
                    disabled=""
                    name="signatory"
                    type="text"
                    value="03600a30cb66c6f6275ead993078d691764629c4f9244e5d38fea73483f31821cc"
                  />
                </fieldset>
                <fieldset
                  class="sc-AxhCb ckQmOL mt-8"
                >
                  <label
                    class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-700"
                    data-testid="FormLabel"
                    for="signature"
                  >
                    Signature
                    <div
                      class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                      data-testid="FormLabel__required"
                    />
                  </label>
                  <input
                    class="sc-AxhUy bmthJt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
                    data-testid="VerifyMessage__signature-input"
                    name="signature"
                    type="text"
                  />
                </fieldset>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="sc-AxiKw krTnPh"
                  data-testid="VerifyMessage__cancel"
                  type="button"
                >
                  Cancel
                </button>
                <button
                  class="sc-AxiKw fJelQD"
                  data-testid="VerifyMessage__submit"
                  type="submit"
                >
                  Verify
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
